Fix text overflow

--- a/css/languages.css
+++ b/css/languages.css
@@ -43,10 +43,10 @@
 .item-list tr {
   display: flex;
   flex-direction: row;
-  height: 10rem;
+  height: fit-content;
   margin: 1rem;
   padding: 1rem;
-  border: 2px solid #000000;
+  border: 1px solid #000000;
   border-radius: 8px;
 }
 
